Bug 418428. Don't force devpixels to be an integer multiple of CSS pixels when printing on Windows. r=stuart